# medrag-agent

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.claude/: CLAUDE.md
app/: gradio_app.py
eval/: evaluate.py  qa_samples.json.example
src/medrag/: agent.py  config.py
src/medrag/cli/: main.py
src/medrag/generation/: generator.py  rewriter.py
src/medrag/ingestion/: embedder.py  loader.py  splitter.py
src/medrag/retrieval/: bm25.py  hybrid.py  reranker.py  retriever.py
tests/: test_ingestion.py  test_retrieval.py  test_rewriter.py
