[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medrag-agent"
version = "0.1.0"
description = "Medical domain RAG-based Q&A Agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "rank-bm25>=0.2.2",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2.0",
    "datasets>=2.0.0",
    "langchain-openai>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
medrag = "medrag.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/medrag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/medrag --cov-report=term-missing"
